admd: Make password change Rest
